<resources>
    <string name="app_name">GoldFish</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="leave_message">Leave the game?</string>
    <string name="miss_you">we will miss you!</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="start_game">Ready? Go!</string>
    <string name="moves">Moves: #</string>
    <string name="time_00_00_00">Time: 00.00.00</string>
    <string name="best">Best:</string>
    <string name="main_menu">Main Menu:</string>
    <string name="settings">Settings</string>
    <string name="Menu_start_game">Start Game</string>
    <string name="music">Music</string>
    <string name="audio">Audio</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="Menu_sound_settings">Sound Settings</string>
    <string name="Menu_settings">Settings:</string>
    <string name="radio_twoplayers">Two players</string>
    <string name="radio_oneplayer">One player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="radio_easy">Easy</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_hard">Hard</string>
    <string name="finish_time">Your finish time is:</string>
</resources>
